--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
+edition = "2021"
 name = "mtif-rs"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 nom = "7"
-time = { version = "0.3.17", features = ["std", "macros"] }
+nom-bufreader = "0.2.0"
+time = {version = "0.3.17", features = ["std", "macros"]}
